--- a/src/main.scss
+++ b/src/main.scss
@@ -11,3 +11,7 @@ html {
     Noto Sans Osmanya, Noto Sans Tamil, Noto Sans Telugu, Noto Sans Thai,
     sans-serif;
 }
+
+body {
+  padding: 8px;
+}
