--- a/src/components/CountrySelect/CountrySelect.scss
+++ b/src/components/CountrySelect/CountrySelect.scss
@@ -42,9 +42,14 @@
   margin-top: -8px;
   right: 17px;
   background-image: url("~static/down.svg");
+  pointer-events: none;
 }
-.root.open > i {
-  transform: rotate(180);
+.root.open > i,
+.root.upperSelect > i {
+  transform: rotate(180deg);
+}
+.root.upperSelect.open > i {
+  transform: rotate(0deg);
 }
 ul.list > li {
   display: flex;
@@ -52,7 +57,7 @@ ul.list > li {
   cursor: pointer;
   height: 56px;
   padding: 0 16px;
-  padding-right: 12px;
+  padding-right: 8px;
   > i {
     margin-right: 33px;
     width: 23px;
@@ -104,7 +109,7 @@ ul.list > li:hover {
 
 ul.list {
   &::-webkit-scrollbar {
-    width: 4px;
+    width: 8px;
     opacity: 0;
   }
 
