--- a/src/components/ChatHeader/ChatHeader.scss
+++ b/src/components/ChatHeader/ChatHeader.scss
@@ -5,4 +5,81 @@
   border-bottom: 1px solid #dadce0;
   background: #fff;
   height: 61px;
+  z-index: 10;
+  background: #fff;
+
+  align-self: center;
+  padding: 8px;
+  > :first-child {
+    margin-left: 12px;
+  }
+  > :last-child {
+    margin-right: 14px;
+  }
+}
+
+.photo {
+  height: 44px;
+  width: 44px;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 21px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  margin-right: 16.5px;
+  overflow: hidden;
+  > img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
+.icon {
+  flex-shrink: 0;
+  font-size: 17px;
+  color: #707579;
+  width: 44px;
+  height: 44px;
+  margin-right: 6.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  &:hover {
+    background-color: rgba(112, 117, 121, 0.08);
+  }
+}
+
+.title {
+  display: flex;
+  font-size: 15px;
+  font-weight: 500;
+  color: #000;
+  width: 100%;
+  align-items: center;
+  flex: 1;
+}
+
+.status {
+  display: flex;
+  font-size: 13px;
+  color: #707579;
+  &.blue {
+    color: #3390ec;
+  }
+  width: 100%;
+  align-items: center;
+  flex: 1;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: flex-start;
+  justify-content: center;
 }
