--- a/src/components/ChatHeader/ChatHeader.scss
+++ b/src/components/ChatHeader/ChatHeader.scss
@@ -39,7 +39,7 @@
 
 .icon {
   flex-shrink: 0;
-  font-size: 17px;
+  font-size: 24px;
   color: #707579;
   width: 44px;
   height: 44px;
@@ -60,7 +60,7 @@
   font-weight: 500;
   color: #000;
   width: 100%;
-  align-items: center;
+  margin-top: 4px;
   flex: 1;
 }
 
@@ -72,7 +72,7 @@
     color: #3390ec;
   }
   width: 100%;
-  align-items: center;
+  margin-top: 3px;
   flex: 1;
 }
 
