--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -45,7 +45,7 @@
   flex-direction: column-reverse;
   flex-grow: 1;
   // height: 100%;
-  max-width: 633px;
+  max-width: 697px;
   width: 100%;
   // margin-bottom: 84px;
   // margin-top: 100px;
@@ -59,4 +59,13 @@
   flex-grow: 1;
   min-height: 100%;
   width: 100%;
+}
+
+.hr {
+  max-width: 697px;
+  width: 100%;
+  height: 1px;
+}
+.scroll .hr {
+  background: #dadce0;
 }
