--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -1,8 +1,7 @@
 .root {
   display: flex;
   margin-top: 5px;
-  min-height: 33px;
-  min-width: 33px;
+
   position: relative;
   margin-right: auto;
   max-width: 100%;
@@ -13,7 +12,7 @@
   > * {
     z-index: 2;
   }
-  > .text {
+  > .wrap {
     border-radius: 12px 12px 12px 12px;
     // box-shadow: 0 1px 2px 0 rgba(16, 35, 47, 0.15);
     box-shadow: 0px 1px 2px rgba(16, 35, 47, 0.15);
@@ -28,20 +27,20 @@
     // border-radius: 12px 12px 0 12px;
   }
 }
-.left:not(.last) > .text {
+.left:not(.last) > .wrap {
   border-top-left-radius: 6px;
 }
-.right:not(.last) > .text {
+.right:not(.last) > .wrap {
   border-top-right-radius: 6px;
 }
-.left:not(.first) > .text {
+.left:not(.first) > .wrap {
   border-bottom-left-radius: 6px;
 }
-.right:not(.first) > .text {
+.right:not(.first) > .wrap {
   border-bottom-right-radius: 6px;
 }
 .left.first {
-  > .text {
+  > .wrap {
     border-bottom-left-radius: 0px;
   }
   > .tail {
@@ -49,21 +48,26 @@
   }
 }
 .right.first {
-  > .text {
+  > .wrap {
     border-bottom-right-radius: 0px;
   }
   > .tail {
     display: block;
   }
 }
-.text {
-  padding: 10px;
+.wrap {
+  min-height: 33px;
+  min-width: 33px;
+  padding: 6px 10px;
+
+  max-width: 480px;
   font-size: 15px;
   line-height: 21px;
   white-space: pre-wrap;
   background-color: #fff;
+  overflow: hidden;
 }
-.self > .text {
+.self > .wrap {
   background-color: #eeffde;
 }
 
@@ -84,6 +88,120 @@
 }
 .tail.left {
   left: -10px;
-  bottom: -3.5px;
+  bottom: -2.5px;
   transform: scaleX(-1);
+}
+
+.photo {
+  max-height: 360px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: calc(100% + 20px);
+  margin-top: -6px;
+  margin-left: -10px;
+  margin-bottom: -12px;
+  margin-right: -10px;
+  overflow: hidden;
+  > img {
+    transition: all 0.4s ease-out;
+    width: 100%;
+    height: auto;
+  }
+  &:not(:last-child) {
+    margin-bottom: 6px;
+  }
+}
+
+.text {
+  padding: 0;
+  > a {
+    color: #3390ec;
+    text-decoration: none;
+    &:hover {
+      color: #3390ec;
+      text-decoration: underline;
+    }
+  }
+}
+
+.title {
+  font-size: 14px;
+  font-weight: 500;
+  color: #3692ed;
+  line-height: 19px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.noText {
+  .tail {
+    display: none !important;
+  }
+  .wrap {
+    // background: transparent;
+    border-radius: 12px 12px 12px 12px !important;
+  }
+}
+
+.text {
+  > pre {
+    color: #1a548e;
+    font-size: 13px;
+    overflow: hidden;
+    max-width: 100%;
+    display: inline-block;
+    font-family: Roboto Mono;
+    word-break: break-word;
+    white-space: pre-wrap;
+  }
+  > b {
+    font-weight: 500;
+  }
+}
+
+.ava {
+  display: none;
+  width: 33px;
+  color: #fff;
+  font-size: 13px;
+  height: 33px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  overflow: hidden;
+  flex-shrink: 0;
+  margin-right: 5px;
+  margin-top: auto;
+}
+.withAva .ava {
+  display: flex;
+}
+.withAva .tail {
+  margin-left: 38px;
+}
+
+.reply {
+  border-left: 2px solid #1da1f1;
+  padding: 0 8px;
+  margin-bottom: 7px;
+  margin-top: 3px;
+  display: flex;
+  flex-wrap: wrap;
+  > .title {
+    font-size: 14px;
+    line-height: 18px;
+    margin-top: -4px;
+    margin-bottom: 4px;
+  }
+  > .text {
+    font-size: 14px;
+    line-height: 12px;
+  }
+  > * {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
